backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legendary-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legendary-backend
      
  template:
    metadata:
      labels:
        app: legendary-backend
    spec:
      containers:
      - name: legendary-backend-node
        image: insaiyadin/legendary-backend:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
        volumeMounts:
          - name: movies-pv
            mountPath: /app/logs
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
      volumes:
        - name: movies-pv
          persistentVolumeClaim:
            claimName: host-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: legendary-backend-srv
spec:
  selector:
    app: legendary-backend
  ports:
    - name: backend
      protocol: TCP
      port: 8080
      targetPort: 8080
