client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legendary-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legendary-client
      
  template:
    metadata:
      labels:
        app: legendary-client
    spec:
      containers:
      - name: legendary-client-node
        image: insaiyadin/legendary-frontend:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: legendary-client-srv
spec:
  selector:
    app: legendary-client
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
