ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legendary-local-com-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: legendary.kierenkiewicz.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: legendary-backend-srv
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: legendary-client-srv
                port:
                  number: 3000
